--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,52 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Contact details and map location of the Nigerian Embassy in Prague." />
+  <title>Contact - Embassy of Nigeria, Prague</title>
+  <link rel="stylesheet" href="styles.css" />
+  <style>
+    body { font-family: Arial, sans-serif; margin: 0; }
+    header { background-color: #006400; padding: 10px 0; }
+    nav { display: flex; justify-content: center; gap: 20px; }
+    nav a { color: white; text-decoration: none; font-weight: 500; }
+    .section { padding: 40px 20px; max-width: 900px; margin: auto; }
+    h1 { color: #006400; }
+    iframe { width: 100%; height: 300px; border: none; margin-top: 20px; }
+    footer { background: #003300; color: white; text-align: center; padding: 20px 10px; margin-top: 40px; }
+  </style>
+</head>
+<body>
+  <header>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="ambassador.html">Ambassador</a>
+      <a href="visa.html">Visa</a>
+      <a href="consular.html">Consular</a>
+      <a href="events.html">Events</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+
+  <section class="section">
+    <h1>Contact the Embassy</h1>
+    <p><strong>Embassy of the Federal Republic of Nigeria</strong></p>
+    <p>Address: [Insert full address here, e.g., V Průhledu 1, Prague, Czech Republic]</p>
+    <p>Telephone: +420 XXX XXX XXX</p>
+    <p>Email: info@nigeriaembassy.cz</p>
+
+    <h2>Opening Hours</h2>
+    <p>Monday – Friday: 9:00 AM – 4:00 PM<br>
+    Consular Services: Tuesday – Thursday: 10:00 AM – 2:00 PM</p>
+
+    <iframe src="https://maps.google.com/maps?q=prague%20nigerian%20embassy&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Embassy of Nigeria, Prague. All rights reserved.</p>
+  </footer>
+</body>
+</html>
 
