--- a/ambassador.html
+++ b/ambassador.html
@@ -5,17 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Message from the Ambassador of Nigeria to the Czech Republic." />
   <title>Ambassador's Message - Embassy of Nigeria, Prague</title>
-  <link rel="stylesheet" href="styles.css" />
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; }
-    header { background-color: #006400; padding: 10px 0; }
-    nav { display: flex; justify-content: center; gap: 20px; }
-    nav a { color: white; text-decoration: none; font-weight: 500; }
-    .section { padding: 40px 20px; max-width: 900px; margin: auto; }
-    h1 { color: #006400; }
-    .message-box { background: #f0f0f0; padding: 20px; border-left: 5px solid #006400; }
-    footer { background: #003300; color: white; text-align: center; padding: 20px 10px; margin-top: 40px; }
-  </style>
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <header>
@@ -32,7 +22,7 @@
 
   <section class="section">
     <h1>Message from the Ambassador</h1>
-    <div class="message-box">
+    <div class="message-box" style="background:#f0f0f0; padding:20px; border-left:5px solid #006400;">
       <p>Dear Visitors,</p>
       <p>It is with great pleasure that I welcome you to the official website of the Embassy of Nigeria in Prague. This platform serves as a window into Nigeria’s diplomatic presence in the Czech Republic and a gateway for engagement with our beloved nation.</p>
       <p>Our mission is to deepen bilateral relations, support Nigerian citizens abroad, and promote the economic, educational, and cultural interests of Nigeria. We are here to serve you and ensure your needs are met with professionalism and care.</p>
