--- a/consular.html
+++ b/consular.html
@@ -5,17 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Consular services offered by the Embassy of Nigeria in Prague." />
   <title>Consular Services - Embassy of Nigeria, Prague</title>
-  <link rel="stylesheet" href="styles.css" />
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; }
-    header { background-color: #006400; padding: 10px 0; }
-    nav { display: flex; justify-content: center; gap: 20px; }
-    nav a { color: white; text-decoration: none; font-weight: 500; }
-    .section { padding: 40px 20px; max-width: 1000px; margin: auto; }
-    h1, h2 { color: #006400; }
-    ul { padding-left: 20px; }
-    footer { background: #003300; color: white; text-align: center; padding: 20px 10px; margin-top: 40px; }
-  </style>
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <header>
