--- a/events.html
+++ b/events.html
@@ -5,18 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Latest news and events from the Embassy of Nigeria in Prague." />
   <title>News & Events - Embassy of Nigeria, Prague</title>
-  <link rel="stylesheet" href="styles.css" />
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; }
-    header { background-color: #006400; padding: 10px 0; }
-    nav { display: flex; justify-content: center; gap: 20px; }
-    nav a { color: white; text-decoration: none; font-weight: 500; }
-    .section { padding: 40px 20px; max-width: 1000px; margin: auto; }
-    h1 { color: #006400; }
-    .news-item { background: #f9f9f9; border-left: 4px solid #006400; padding: 15px; margin-bottom: 20px; }
-    .date { color: gray; font-size: 0.9rem; }
-    footer { background: #003300; color: white; text-align: center; padding: 20px 10px; margin-top: 40px; }
-  </style>
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <header>
