--- a/contact.html
+++ b/contact.html
@@ -5,17 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Contact details and map location of the Nigerian Embassy in Prague." />
   <title>Contact - Embassy of Nigeria, Prague</title>
-  <link rel="stylesheet" href="styles.css" />
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; }
-    header { background-color: #006400; padding: 10px 0; }
-    nav { display: flex; justify-content: center; gap: 20px; }
-    nav a { color: white; text-decoration: none; font-weight: 500; }
-    .section { padding: 40px 20px; max-width: 900px; margin: auto; }
-    h1 { color: #006400; }
-    iframe { width: 100%; height: 300px; border: none; margin-top: 20px; }
-    footer { background: #003300; color: white; text-align: center; padding: 20px 10px; margin-top: 40px; }
-  </style>
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <header>
@@ -41,7 +31,7 @@
     <p>Monday – Friday: 9:00 AM – 4:00 PM<br>
     Consular Services: Tuesday – Thursday: 10:00 AM – 2:00 PM</p>
 
-    <iframe src="https://maps.google.com/maps?q=prague%20nigerian%20embassy&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
+    <iframe src="https://maps.google.com/maps?q=prague%20nigerian%20embassy&t=&z=13&ie=UTF8&iwloc=&output=embed" style="width:100%; height:300px; border:none; margin-top:20px;"></iframe>
   </section>
 
   <footer>
@@ -49,4 +39,3 @@
   </footer>
 </body>
 </html>
-
