--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
         <li><a href="about.html">About</a></li>
         <li><a href="visa.html">Visa</a></li>
         <li><a href="consular.html">Consular</a></li>
-        <li><a href="trade.html">Trade</a></li>
+        <li><a href="ambassador.html">Ambassador</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
