--- a/ambassador.html
+++ b/ambassador.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Message from the Ambassador of Nigeria to the Czech Republic." />
   <title>Ambassador's Message - Embassy of Nigeria, Prague</title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="Css/styles.css" />
 </head>
 <body>
   <header>
