--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact - Embassy of Nigeria, Prague</title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="Css/styles.css" />
 </head>
 <body>
   <header class="site-header">
@@ -13,9 +13,10 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
+        <li><a href="ambassador.html">Ambassador</a></li>
         <li><a href="visa.html">Visa</a></li>
         <li><a href="consular.html">Consular</a></li>
-        <li><a href="trade.html">Trade</a></li>
+        <li><a href="events.html">Events</a></li>
         <li><a href="contact.html" class="active">Contact</a></li>
       </ul>
     </nav>
