--- a/events.html
+++ b/events.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Events - Embassy of Nigeria, Prague</title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="Css/styles.css" />
 </head>
 <body>
   <header class="site-header">
@@ -13,11 +13,12 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
+        <li><a href="ambassador.html">Ambassador</a></li>
         <li><a href="visa.html">Visa</a></li>
         <li><a href="consular.html">Consular</a></li>
-        <li><a href="trade.html">Trade</a></li>
-        <li><a href="contact.html">Contact</a></li>
         <li><a href="events.html" class="active">Events</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        
       </ul>
     </nav>
   </header>
