--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Official website of the Embassy of Nigeria in Prague. Get the latest information about consular services, visa, and diplomatic news." />
   <title>Embassy of Nigeria, Prague</title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="Css/styles.css" />
 </head>
 <body>
   <header class="site-header">
