--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- Hero Slider -->
   <section class="hero">
     <div class="slider">
-      <div class="slide active" style="background-image: url('Imgages/embassylogo.jpg.jpeg')">
+      <div class="slide active" style="background-image: url('Images/embassylogo.jpg')">
         <div class="caption">Welcome to the Embassy of Nigeria, Prague</div>
       </div>
       <div class="slide" style="background-image: url('img/img2.jpg')">
