--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
   <!-- Hero Slider -->
   <section class="hero">
     <div class="slider">
-      <div class="slide active" style="background-image: url('Images/embassylogo.jpg')">
+      <div class="slide active" style="background-image: url('Images/lag-one.jpg')">
         <div class="caption">Welcome to the Embassy of Nigeria, Prague</div>
       </div>
-      <div class="slide" style="background-image: url('img/img2.jpg')">
+      <div class="slide" style="background-image: url('Images/abj-one.jpg')">
         <div class="caption">Nigeria and Czech Republic: Stronger Together</div>
       </div>
-      <div class="slide" style="background-image: url('img/img3.jpg')">
+      <div class="slide" style="background-image: url('Images/abj-two.jpg')">
         <div class="caption">Consular, Visa and Trade Services</div>
       </div>
     </div>
