--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Header Navigation -->
   <header>
     <div class="container nav-container">
-      <img src="logo.png" alt="Nigerian Embassy Logo" class="logo" />
+      <img src="Images/logo-embassy.jpg" alt="Nigerian Embassy Logo" class="logo" />
       <nav>
         <ul class="nav-links">
           <li><a href="#">Home</a></li>
