--- a/index.html
+++ b/index.html
@@ -1,86 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Official website of the Nigerian Embassy in Prague" />
   <title>Embassy of Nigeria, Prague</title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
-<body>
 
-  <!-- Header Navigation -->
+<body>
+  <!-- Header and Navigation -->
   <header>
-    <div class="container nav-container">
+    <div class="container header-flex">
       <img src="logo.png" alt="Nigerian Embassy Logo" class="logo" />
       <nav>
-        <ul class="nav-links">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Visa</a></li>
-          <li><a href="#">Consular Services</a></li>
-          <li><a href="#">News</a></li>
-          <li><a href="#">Contact</a></li>
+        <ul class="navbar">
+          <li class="dropdown">
+            <a href="#">About</a>
+            <ul class="dropdown-menu">
+              <li><a href="about.html">The Embassy</a></li>
+              <li><a href="#">The Ambassador</a></li>
+              <li><a href="#">Staff</a></li>
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a href="#">Nigeria</a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Country Profile</a></li>
+              <li><a href="#">Culture</a></li>
+              <li><a href="#">Economy</a></li>
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a href="#">Services</a>
+            <ul class="dropdown-menu">
+              <li><a href="visa.html">Visa</a></li>
+              <li><a href="consular.html">Consular</a></li>
+              <li><a href="#">Trade & Investment</a></li>
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a href="#">Press Center</a>
+            <ul class="dropdown-menu">
+              <li><a href="news.html">News</a></li>
+              <li><a href="#">Events</a></li>
+              <li><a href="#">Gallery</a></li>
+            </ul>
+          </li>
+          <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <!-- Hero Slider -->
-  <section class="hero">
-    <div class="slider">
-      <div class="slide active" style="background-image: url('Images/lag-one.jpg')">
-        <div class="caption">Welcome to the Embassy of Nigeria, Prague</div>
-      </div>
-      <div class="slide" style="background-image: url('Images/abj-one.jpg')">
-        <div class="caption">Nigeria and Czech Republic: Stronger Together</div>
-      </div>
-      <div class="slide" style="background-image: url('Images/abj-two.jpg')">
-        <div class="caption">Consular, Visa and Trade Services</div>
-      </div>
-    </div>
+  <!-- Hero Section -->
+  <section class="hero-slider">
+    <div class="slide active"><img src="img/slide1.jpg" alt="Slide 1" /></div>
+    <div class="slide"><img src="img/slide2.jpg" alt="Slide 2" /></div>
+    <div class="slide"><img src="img/slide3.jpg" alt="Slide 3" /></div>
   </section>
 
-  <!-- Quick Services -->
-  <section class="services">
+  <!-- Quick Links -->
+  <section class="quick-links">
     <div class="container">
-      <div class="service-box">
-        <img src="icons/passport.png" alt="Passport" />
-        <p>Passport Services</p>
-      </div>
-      <div class="service-box">
-        <img src="icons/visa.png" alt="Visa" />
-        <p>Visa Information</p>
-      </div>
-      <div class="service-box">
-        <img src="icons/trade.png" alt="Trade" />
-        <p>Trade & Investment</p>
-      </div>
-      <div class="service-box">
-        <img src="icons/news.png" alt="News" />
-        <p>Latest News</p>
-      </div>
+      <div class="icon-box"><img src="icons/passport.png" alt="Passport" /><p>Passport</p></div>
+      <div class="icon-box"><img src="icons/visa.png" alt="Visa" /><p>Visa</p></div>
+      <div class="icon-box"><img src="icons/trade.png" alt="Trade" /><p>Trade</p></div>
+      <div class="icon-box"><img src="icons/news.png" alt="News" /><p>News</p></div>
     </div>
   </section>
 
   <!-- News Section -->
-  <section class="news">
+  <section class="news-section">
     <div class="container">
       <h2>Latest News</h2>
-      <div class="news-cards">
+      <div class="news-grid">
         <div class="news-item">
           <img src="news/news1.jpg" alt="News 1" />
-          <h3>Embassy Hosts Independence Day Celebration</h3>
-          <p>Join us as we mark Nigeria's Independence with cultural displays and music.</p>
+          <h3>Embassy Hosts National Day Celebration</h3>
+          <p>Highlights from Nigeria’s independence celebration in Prague...</p>
         </div>
         <div class="news-item">
           <img src="news/news2.jpg" alt="News 2" />
-          <h3>New Visa Policy Announced</h3>
-          <p>Find out about the latest updates in visa application and processing.</p>
+          <h3>Ambassador Meets Czech Officials</h3>
+          <p>Promoting bilateral relations and trade cooperation...</p>
         </div>
         <div class="news-item">
           <img src="news/news3.jpg" alt="News 3" />
-          <h3>Ambassador Meets Czech Officials</h3>
-          <p>Discussions focused on bilateral trade, education, and diplomatic ties.</p>
+          <h3>Nigerian Art Exhibition in Prague</h3>
+          <p>Celebrating Nigerian culture through art and heritage...</p>
         </div>
       </div>
     </div>
@@ -88,17 +97,15 @@
 
   <!-- Footer -->
   <footer>
-    <div class="container footer-container">
-      <p>&copy; 2025 Embassy of Nigeria, Prague. All rights reserved.</p>
-      <div class="footer-links">
-        <a href="#">Privacy</a>
-        <a href="#">Terms</a>
-        <a href="#">Sitemap</a>
+    <div class="container">
+      <div class="footer-content">
+        <p>&copy; 2025 Embassy of Nigeria, Prague. All rights reserved.</p>
+        <p>Email: info@nigeriaembassy.cz | Tel: +420 XXX XXX XXX</p>
       </div>
     </div>
   </footer>
 
   <script src="js/script.js"></script>
 </body>
-</html>
 
+</html>
