--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 
   <!-- Hero Section -->
   <section class="hero-slider">
-    <div class="slide active"><img src="img/slide1.jpg" alt="Slide 1" /></div>
-    <div class="slide"><img src="img/slide2.jpg" alt="Slide 2" /></div>
-    <div class="slide"><img src="img/slide3.jpg" alt="Slide 3" /></div>
+    <div class="slide active"><img src="Images/slide1.jpg" alt="Slide 1" /></div>
+    <div class="slide"><img src="Images/slide2.jpg" alt="Slide 2" /></div>
+    <div class="slide"><img src="Images/slide3.jpg" alt="Slide 3" /></div>
   </section>
 
   <!-- Quick Links -->
