--- a/index.html
+++ b/index.html
@@ -1,111 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Official website of the Nigerian Embassy in Prague" />
+  <meta name="description" content="Official Website of the Nigerian Embassy in Prague" />
   <title>Embassy of Nigeria, Prague</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
-
 <body>
-  <!-- Header and Navigation -->
   <header>
-    <div class="container header-flex">
-      <img src="logo.png" alt="Nigerian Embassy Logo" class="logo" />
-      <nav>
-        <ul class="navbar">
-          <li class="dropdown">
-            <a href="#">About</a>
-            <ul class="dropdown-menu">
-              <li><a href="about.html">The Embassy</a></li>
-              <li><a href="#">The Ambassador</a></li>
-              <li><a href="#">Staff</a></li>
-            </ul>
-          </li>
-          <li class="dropdown">
-            <a href="#">Nigeria</a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Country Profile</a></li>
-              <li><a href="#">Culture</a></li>
-              <li><a href="#">Economy</a></li>
-            </ul>
-          </li>
-          <li class="dropdown">
-            <a href="#">Services</a>
-            <ul class="dropdown-menu">
-              <li><a href="visa.html">Visa</a></li>
-              <li><a href="consular.html">Consular</a></li>
-              <li><a href="#">Trade & Investment</a></li>
-            </ul>
-          </li>
-          <li class="dropdown">
-            <a href="#">Press Center</a>
-            <ul class="dropdown-menu">
-              <li><a href="news.html">News</a></li>
-              <li><a href="#">Events</a></li>
-              <li><a href="#">Gallery</a></li>
-            </ul>
-          </li>
-          <li><a href="contact.html">Contact Us</a></li>
-        </ul>
-      </nav>
+    <div class="container header-container">
+      <img src="img/logo.png" alt="Nigerian Embassy Logo" class="logo" />
+      <h1>Embassy of Nigeria, Prague</h1>
     </div>
+
+    <nav class="navbar">
+      <ul class="nav-menu">
+        <li class="dropdown">
+          <a href="#">About</a>
+          <ul class="dropdown-content">
+            <li><a href="#">The Embassy</a></li>
+            <li><a href="#">The Ambassador</a></li>
+            <li><a href="#">Staff</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a href="#">Nigeria</a>
+          <ul class="dropdown-content">
+            <li><a href="#">Country Profile</a></li>
+            <li><a href="#">Culture</a></li>
+            <li><a href="#">Economy</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a href="#">Services</a>
+          <ul class="dropdown-content">
+            <li><a href="visa.html">Visa</a></li>
+            <li><a href="consular.html">Consular</a></li>
+            <li><a href="#">Trade & Investment</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a href="#">Press Center</a>
+          <ul class="dropdown-content">
+            <li><a href="#">News</a></li>
+            <li><a href="#">Events</a></li>
+            <li><a href="#">Gallery</a></li>
+          </ul>
+        </li>
+        <li><a href="#">Contact Us</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <!-- Hero Section -->
-  <section class="hero-slider">
-    <div class="slide active"><img src="Images/slide1.jpg" alt="Slide 1" /></div>
-    <div class="slide"><img src="Images/slide2.jpg" alt="Slide 2" /></div>
-    <div class="slide"><img src="Images/slide3.jpg" alt="Slide 3" /></div>
-  </section>
+  <main class="container">
+    <section class="slider">
+      <img src="img/slide1.jpg" alt="Slide 1">
+      <img src="img/slide2.jpg" alt="Slide 2">
+      <img src="img/slide3.jpg" alt="Slide 3">
+    </section>
 
-  <!-- Quick Links -->
-  <section class="quick-links">
-    <div class="container">
-      <div class="icon-box"><img src="icons/passport.png" alt="Passport" /><p>Passport</p></div>
-      <div class="icon-box"><img src="icons/visa.png" alt="Visa" /><p>Visa</p></div>
-      <div class="icon-box"><img src="icons/trade.png" alt="Trade" /><p>Trade</p></div>
-      <div class="icon-box"><img src="icons/news.png" alt="News" /><p>News</p></div>
-    </div>
-  </section>
+    <section class="quick-links">
+      <h2>Quick Links</h2>
+      <ul>
+        <li><a href="visa.html">Visa Information</a></li>
+        <li><a href="consular.html">Consular Services</a></li>
+        <li><a href="#">Nigerians in Diaspora</a></li>
+      </ul>
+    </section>
 
-  <!-- News Section -->
-  <section class="news-section">
-    <div class="container">
+    <section class="news">
       <h2>Latest News</h2>
-      <div class="news-grid">
-        <div class="news-item">
-          <img src="news/news1.jpg" alt="News 1" />
-          <h3>Embassy Hosts National Day Celebration</h3>
-          <p>Highlights from Nigeria’s independence celebration in Prague...</p>
-        </div>
-        <div class="news-item">
-          <img src="news/news2.jpg" alt="News 2" />
-          <h3>Ambassador Meets Czech Officials</h3>
-          <p>Promoting bilateral relations and trade cooperation...</p>
-        </div>
-        <div class="news-item">
-          <img src="news/news3.jpg" alt="News 3" />
-          <h3>Nigerian Art Exhibition in Prague</h3>
-          <p>Celebrating Nigerian culture through art and heritage...</p>
-        </div>
-      </div>
-    </div>
-  </section>
+      <article>
+        <h3>President's Visit to Prague</h3>
+        <p>The President of Nigeria will visit the Czech Republic this fall to strengthen bilateral relations.</p>
+      </article>
+      <article>
+        <h3>Embassy Renovation Completed</h3>
+        <p>The Nigerian Embassy in Prague has been fully renovated with modern facilities.</p>
+      </article>
+    </section>
+  </main>
 
-  <!-- Footer -->
   <footer>
-    <div class="container">
-      <div class="footer-content">
-        <p>&copy; 2025 Embassy of Nigeria, Prague. All rights reserved.</p>
-        <p>Email: info@nigeriaembassy.cz | Tel: +420 XXX XXX XXX</p>
-      </div>
-    </div>
+    <p>&copy; 2025 Embassy of Nigeria, Prague. All Rights Reserved.</p>
   </footer>
-
-  <script src="js/script.js"></script>
 </body>
-
 </html>
