--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div class="container header-container">
-      <img src="img/logo.png" alt="Nigerian Embassy Logo" class="logo" />
+      <img src="Images/logo.png" alt="Nigerian Embassy Logo" class="logo" />
       <h1>Embassy of Nigeria, Prague</h1>
     </div>
 
@@ -55,9 +55,9 @@
 
   <main class="container">
     <section class="slider">
-      <img src="img/slide1.jpg" alt="Slide 1">
-      <img src="img/slide2.jpg" alt="Slide 2">
-      <img src="img/slide3.jpg" alt="Slide 3">
+      <img src="Images/slide1.jpg" alt="Slide 1">
+      <img src="Images/slide2.jpg" alt="Slide 2">
+      <img src="Images/slide3.jpg" alt="Slide 3">
     </section>
 
     <section class="quick-links">
