--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li class="dropdown">
           <a href="#">About</a>
           <ul class="dropdown-content">
-            <li><a href="#">The Embassy</a></li>
+            <li><<a href="the-embassy.html">The Embassy</a>
             <li><a href="#">The Ambassador</a></li>
             <li><a href="#">Staff</a></li>
           </ul>
