--- a/index.html
+++ b/index.html
@@ -91,19 +91,19 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="images/slide1.jpg" class="d-block w-100" alt="Evacuation of Nigerians" />
+        <img src="Images/slide1.jpg" class="d-block w-100" alt="Evacuation of Nigerians" />
         <div class="carousel-caption d-none d-md-block">
           <h5>Evacuation of Nigerians in Ukraine via Poland - March 11, 2022</h5>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="images/slide2.jpg" class="d-block w-100" alt="Ambassador meeting" />
+        <img src="Images/slide2.jpg" class="d-block w-100" alt="Ambassador meeting" />
         <div class="carousel-caption d-none d-md-block">
           <h5>H.E. Geoffrey Onyeama receives Ambassador of Italy - March 10, 2022</h5>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="images/slide3.jpg" class="d-block w-100" alt="US Ambassador visit" />
+        <img src="Images/slide3.jpg" class="d-block w-100" alt="US Ambassador visit" />
         <div class="carousel-caption d-none d-md-block">
           <h5>US Ambassador to Nigeria received - March 7, 2022</h5>
         </div>
