--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
   </div>
 </footer>
 
+<script src="js/script.js"></script>
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.bundle.min.js"></script>
 <script src="js/main.js"></script>
