--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             border-radius: 2px;
         }
         .hero-section {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://images.unsplash.com/photo-1559128010-7c1ad6e1b6a5?q=80&w=1920&auto=format&fit=crop');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('images/hero-background.jpg');
             background-size: cover;
             background-position: center;
         }
@@ -69,15 +69,35 @@
             overflow: hidden;
             transition: max-height 0.3s ease-out;
         }
+        /* Floating Flag Animation */
+        .floating-flag {
+            position: fixed;
+            bottom: 25px;
+            right: 25px;
+            width: 100px;
+            z-index: 1000;
+            border-radius: 8px;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+            animation: float-animation 6s ease-in-out infinite;
+        }
+        @keyframes float-animation {
+            0% { transform: translateY(0px); }
+            50% { transform: translateY(-15px); }
+            100% { transform: translateY(0px); }
+        }
     </style>
 </head>
 <body class="bg-gray-100">
+
+    <!-- Floating Nigerian Flag -->
+    <img src="images/nigerian-flag.png" alt="Floating Nigerian Flag" class="floating-flag">
+
 
     <!-- Header -->
     <header class="bg-white shadow-md fixed w-full z-10">
         <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
             <a href="#" class="flex items-center space-x-3">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Coat_of_arms_of_Nigeria.svg/100px-Coat_of_arms_of_Nigeria.svg.png" alt="Nigerian Coat of Arms" class="h-12">
+                <img src="images/logo.png" alt="Nigerian Coat of Arms" class="h-12 w-12">
                 <div>
                     <h1 class="text-lg font-bold nigeria-green">Embassy of Nigeria</h1>
                     <p class="text-xs text-gray-600">Prague, Czech Republic</p>
@@ -200,7 +220,7 @@
             <div class="container mx-auto px-6">
                 <div class="flex flex-wrap items-center">
                     <div class="w-full md:w-1/3 text-center mb-8 md:mb-0">
-                        <img src="https://images.unsplash.com/photo-1542909168-82c3e7fdca5c?q=80&w=800&auto=format&fit=crop" alt="Ambassador Photo" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]">
+                        <img src="images/ambassador.jpg" alt="Ambassador Photo" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]">
                     </div>
                     <div class="w-full md:w-2/3 md:pl-12">
                          <h2 class="text-3xl md:text-4xl font-bold section-title inline-block mb-6">A Message from the Ambassador</h2>
@@ -289,12 +309,12 @@
                         <p class="text-gray-600 mb-4">Nigeria, the "Giant of Africa," is a country of over 200 million people with more than 250 ethnic groups. Its history is rich with powerful kingdoms and empires. It gained independence from the United Kingdom in 1960 and has since become a federal republic, playing a significant role in African and global affairs.</p>
                     </div>
                     <div>
-                         <img src="https://images.unsplash.com/photo-1568593983993-3b3a3c9a01f6?q=80&w=1200&auto=format&fit=crop" alt="Zuma Rock, Nigeria" class="rounded-lg shadow-lg">
+                         <img src="images/zuma-rock.jpg" alt="Zuma Rock, Nigeria" class="rounded-lg shadow-lg">
                     </div>
                 </div>
                  <div id="nigeria-culture" class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center mt-16 scroll-mt-16">
                      <div class="order-2 md:order-1">
-                         <img src="https://images.unsplash.com/photo-1605057032236-84803504f7a2?q=80&w=1200&auto=format&fit=crop" alt="Nigerian Jollof Rice" class="rounded-lg shadow-lg">
+                         <img src="images/nigerian-culture.jpg" alt="Nigerian Jollof Rice" class="rounded-lg shadow-lg">
                     </div>
                     <div class="order-1 md:order-2">
                         <h3 class="text-2xl font-bold mb-4 nigeria-green">Culture, Arts & Tourism</h3>
@@ -312,7 +332,7 @@
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <div class="bg-white rounded-lg shadow-md overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?q=80&w=1200&auto=format&fit=crop" alt="Community event" class="w-full h-48 object-cover">
+                        <img src="images/news1.jpg" alt="Community event" class="w-full h-48 object-cover">
                         <div class="p-6">
                             <span class="text-xs text-gray-500">September 1, 2025</span>
                             <h4 class="font-bold text-lg my-2">Embassy Celebrates Nigerian Independence Day</h4>
@@ -321,7 +341,7 @@
                         </div>
                     </div>
                     <div class="bg-white rounded-lg shadow-md overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1554224155-1696413565d3?q=80&w=1200&auto=format&fit=crop" alt="Online booking system" class="w-full h-48 object-cover">
+                        <img src="images/news2.jpg" alt="Online booking system" class="w-full h-48 object-cover">
                         <div class="p-6">
                              <span class="text-xs text-gray-500">August 25, 2025</span>
                             <h4 class="font-bold text-lg my-2">New Consular Appointment System Launched</h4>
@@ -330,7 +350,7 @@
                         </div>
                     </div>
                     <div class="bg-white rounded-lg shadow-md overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?q=80&w=1200&auto=format&fit=crop" alt="Business forum" class="w-full h-48 object-cover">
+                        <img src="images/news3.jpg" alt="Business forum" class="w-full h-48 object-cover">
                         <div class="p-6">
                              <span class="text-xs text-gray-500">August 15, 2025</span>
                             <h4 class="font-bold text-lg my-2">Nigeria-Czech Business Forum Announced</h4>
