--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <div class="bg-white rounded-lg shadow-md overflow-hidden">
-                        <img src="images/news1.jpg" alt="Community event" class="w-full h-48 object-cover">
+                        <img src="news/news1.jpg" alt="Community event" class="w-full h-48 object-cover">
                         <div class="p-6">
                             <span class="text-xs text-gray-500">September 1, 2025</span>
                             <h4 class="font-bold text-lg my-2">Embassy Celebrates Nigerian Independence Day</h4>
@@ -341,7 +341,7 @@
                         </div>
                     </div>
                     <div class="bg-white rounded-lg shadow-md overflow-hidden">
-                        <img src="images/news2.jpg" alt="Online booking system" class="w-full h-48 object-cover">
+                        <img src="news/news2.jpg" alt="Online booking system" class="w-full h-48 object-cover">
                         <div class="p-6">
                              <span class="text-xs text-gray-500">August 25, 2025</span>
                             <h4 class="font-bold text-lg my-2">New Consular Appointment System Launched</h4>
@@ -350,7 +350,7 @@
                         </div>
                     </div>
                     <div class="bg-white rounded-lg shadow-md overflow-hidden">
-                        <img src="images/news3.jpg" alt="Business forum" class="w-full h-48 object-cover">
+                        <img src="news/news3.jpg" alt="Business forum" class="w-full h-48 object-cover">
                         <div class="p-6">
                              <span class="text-xs text-gray-500">August 15, 2025</span>
                             <h4 class="font-bold text-lg my-2">Nigeria-Czech Business Forum Announced</h4>
