--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                 </div>
                  <div id="nigeria-culture" class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center mt-16 scroll-mt-16">
                      <div class="order-2 md:order-1">
-                         <img src="images/nigerian-culture.jpg" alt="Nigerian Jollof Rice" class="rounded-lg shadow-lg">
+                         <img src="images/jollof-rice.jpg" alt="Nigerian Jollof Rice" class="rounded-lg shadow-lg">
                     </div>
                     <div class="order-1 md:order-2">
                         <h3 class="text-2xl font-bold mb-4 nigeria-green">Culture, Arts & Tourism</h3>
