--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             <div class="container mx-auto px-6">
                 <div class="flex flex-wrap items-center">
                     <div class="w-full md:w-1/3 text-center mb-8 md:mb-0">
-                        <img src="images/ambassador.jpg" alt="Ambassador Photo" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]">
+                        <img src="Images/charge-daffairs.jpg" alt="Head of Chancery Photo" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]">
                     </div>
                     <div class="w-full md:w-2/3 md:pl-12">
                          <h2 class="text-3xl md:text-4xl font-bold section-title inline-block mb-6">A Message from the Ambassador</h2>
