--- a/index.html
+++ b/index.html
@@ -220,14 +220,14 @@
             <div class="container mx-auto px-6">
                 <div class="flex flex-wrap items-center">
                     <div class="w-full md:w-1/3 text-center mb-8 md:mb-0">
-                        <img src="Images/charge-daffairs.jpg" alt="Head of Chancery Photo" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]">
+                        <img src="Images/charge-daffairs.jpg" alt="CDA Photo" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]">
                     </div>
                     <div class="w-full md:w-2/3 md:pl-12">
-                         <h2 class="text-3xl md:text-4xl font-bold section-title inline-block mb-6">A Message from the Ambassador</h2>
+                         <h2 class="text-3xl md:text-4xl font-bold section-title inline-block mb-6">A Message from the CDA</h2>
                          <p class="text-gray-600 mb-4">On behalf of the President of the Federal Republic of Nigeria, His Excellency Bola Ahmed Tinubu, and the entire staff of the Embassy, I extend a warm welcome to the official website of the Embassy of Nigeria in Prague.</p>
                          <p class="text-gray-600 mb-4">This website is designed to be a comprehensive resource for Nigerian citizens, our Czech friends, and international visitors. Whether you are seeking consular services, exploring business opportunities in Nigeria, or learning more about our rich culture, we are here to assist you.</p>
                          <p class="text-gray-600">We are committed to fostering the excellent bilateral relations between Nigeria and the Czech Republic and to providing efficient and courteous service to all. Thank you for visiting.</p>
-                         <p class="font-bold mt-6 nigeria-green">H.E. Dr. Maureen Tamuno</p>
+                         <p class="font-bold mt-6 nigeria-green">CDA Sarah Bukar-Godwin (Mrs.)</p>
                          <p class="text-sm text-gray-500">Ambassador of Nigeria to the Czech Republic</p>
                     </div>
                 </div>
