--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             border-radius: 2px;
         }
         .hero-section {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('images/hero-background.jpg');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('icons/hero-background.png');
             background-size: cover;
             background-position: center;
         }
