--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <body class="bg-gray-100">
 
     <!-- Floating Nigerian Flag -->
-    <img src="images/nigerian-flag.png" alt="Floating Nigerian Flag" class="floating-flag">
+    <img src="icons/hero-background.png" alt="Floating Nigerian Flag" class="floating-flag">
 
 
     <!-- Header -->
